--- a/TechAtHome/Views/Shared/_Layout.cshtml
+++ b/TechAtHome/Views/Shared/_Layout.cshtml
@@ -18,10 +18,22 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/HomePage/Index/">Главная <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/HomePage/Index/">Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">О нас</a>
+                        <a class="nav-link" href="Goods/ViewList">Все товары</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Goods/ViewList/PC">Стационарные ПК</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Goods/ViewList/Note">Ноутбуки</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Goods/ViewList/Phone">Смартфоны</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Goods/ViewList/Tab">Планшеты</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="/ShopCart/">Корзина</a>
