--- a/TechAtHome/Views/Shared/_Layout.cshtml
+++ b/TechAtHome/Views/Shared/_Layout.cshtml
@@ -22,19 +22,19 @@
                         <a class="nav-link" href="/HomePage/Index/">Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Goods/ViewList">Все товары</a>
+                        <a class="nav-link" href="/Goods/ViewList">Все товары</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Goods/ViewList/PC">Стационарные ПК</a>
+                        <a class="nav-link" href="/Goods/ViewList/PC">Стационарные ПК</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Goods/ViewList/Note">Ноутбуки</a>
+                        <a class="nav-link" href="/Goods/ViewList/Note">Ноутбуки</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Goods/ViewList/Phone">Смартфоны</a>
+                        <a class="nav-link" href="/Goods/ViewList/Phone">Смартфоны</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Goods/ViewList/Tab">Планшеты</a>
+                        <a class="nav-link" href="/Goods/ViewList/Tab">Планшеты</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="/ShopCart/">Корзина</a>
