--- a/TechAtHome/Views/Shared/_AllGoods.cshtml
+++ b/TechAtHome/Views/Shared/_AllGoods.cshtml
@@ -4,5 +4,5 @@
         <img class="img-thumbnail" src="@Model.Img" alt="@Model.Name" />
         <h2>Модель: @Model.Name</h2>
         <p>Цена: @Model.Price.ToString("c")</p>
-        <p><a class="btn btn-warning" href="#">Подробнее</a></p>
+        <p><a class="btn btn-warning" asp-controller="ShopCart" asp-action="AddToCart_ControllerFunc" asp-route-id="@Model.ID">Добавить в корзину</a></p>
     </div>
