--- a/TechAtHome/Views/Shared/_Layout.cshtml
+++ b/TechAtHome/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="/Goods/ViewList/Tab">Планшеты</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="/ShopCart/">Корзина</a>
+                        <a class="nav-link" href="/ShopCart/">Корзина</a>
                     </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
